--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 .name-color {
   color: darkmagenta;
 }
@@ -39,4 +42,19 @@ h1 {
 }
 .dream-big-color {
   color: blue;
+}
+.blue-color {
+  color: blue;
+}
+.experiance-area {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.experiances-item {
+  width: 40%;
+  padding-left: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
+  box-shadow: 10px 10px 40px gray;
 }
